--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Javascript Unchained</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/serif.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -25,7 +25,7 @@
 		<div class="reveal">
 			<div class="slides">
         <section data-background-image="img/chains.jpg">
-          <h1>Javascript Unchained</h1>
+          <h1 style="color: white">Javascript Unchained</h1>
         </section>
         <section>
           <h2>Javascript has two very important chains</h1>
