Add stranger things title cards and modify presentation

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-        <section data-background-image="img/chains.jpg">
-          <h1 style="color: white">Javascript Unchained</h1>
+        <section data-background-image="img/javascript-chains.png">
         </section>
         <section>
           <h2>Javascript has two very important chains</h1>
@@ -36,9 +35,8 @@
             Scope-chain
           </p>
         </section>
-        <section>
-          <h2>Prototype-chain</h2>
-          <p>
+        <section data-background-image="img/prototype-chain.png">
+          <p class="fragment" style="color:white">
             Object-oriented programming in JS
           </p>
           <aside class="notes">
@@ -216,11 +214,7 @@ var sparky = new Dragon({
             is traversed until that method is found.
           </p>
         </section>
-        <section>
-          <h2>Scope-chain</h2>
-          <p>
-            How I learned to stop worrying and love closure
-          </p>
+        <section data-background-image="img/scope-chain.png">
         </section>
         <section>
           <h2>Anonymous functions</h2>
