Fix error in closure example

--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@ Hello world!
           </section>
           <section data-background-image="img/oh-you.jpg">
             <aside class="notes">
-              This is an example of not capturing an object when you actually
-              meant to.
+              This is an example of accidentally capturing a variable
+							when you didn't mean to.
             </aside>
           </section>
           <section>
