--- a/index.html
+++ b/index.html
@@ -396,9 +396,25 @@ for (var i = 0; i < 10; i++){
 		<script src="js/reveal.js"></script>
 
 		<script>
+			function getParameterByName(name, url) {
+				if (!url) url = window.location.href;
+				name = name.replace(/[\[\]]/g, "\\$&");
+				var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+						results = regex.exec(url);
+				if (!results) return null;
+				if (!results[2]) return '';
+				return decodeURIComponent(results[2].replace(/\+/g, " "));
+			}
+
 			// More info https://github.com/hakimel/reveal.js#configuration
-			Reveal.initialize({
+			var config = {
 				history: true,
+
+				multiplex: {
+					secret: null,
+					id: 'e7faafd79c241876',
+					url: 'https://reveal-js-multiplex-ccjbegmaii.now.sh'
+				},
 
 				// More info https://github.com/hakimel/reveal.js#dependencies
 				dependencies: [
@@ -406,8 +422,18 @@ for (var i = 0; i < 10; i++){
 					{ src: 'plugin/markdown/markdown.js' },
 					{ src: 'plugin/notes/notes.js', async: true },
 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
+					{ src: '//cdn.socket.io/socket.io-1.3.5.js', async: true },
+					{ src: 'plugin/multiplex/master.js', async: true },
+					{ src: 'plugin/multiplex/client.js', async: true }
 				]
-			});
+			};
+
+			var secret = getParameterByName('secret');
+			if (secret) {
+				config.multiplex.secret = secret;
+			}
+
+			Reveal.initialize(config);
 		</script>
 	</body>
 </html>
