--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ for (var i = 0; i < 10; i++){
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
 					{ src: 'plugin/notes/notes.js', async: true },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
+					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
 					{ src: '//cdn.socket.io/socket.io-1.3.5.js', async: true },
 					{ src: 'plugin/multiplex/master.js', async: true },
 					{ src: 'plugin/multiplex/client.js', async: true }
